style.css
:root {
    --unit: 4.5vmin;
    --border: .75vmin;
    --margin: .1vmin;
    --fontsize: 1.65vmin;

    --hue-selected: 0;
    --hue-left: 240;
    --hue-right: 0;

    --color-active-text: hsl(var(--hue-selected), 100%, 50%);
    --color-bg: lightslategray;
    --color-bodypart-border: hsl(0, 0%, 30%);
    --color-bodypart-text: black;
    --color-bodypart-text-info: grey;
    --color-bodypart-text-important: red;
    --color-bodypart-hand-left-border: hsl(var(--hue-left), 100%, 30%);
    --color-bodypart-hand-right-border: hsl(var(--hue-right), 100%, 30%);
    --color-button-bg: white;
    --color-button-border-inactive: darkgrey;
    --color-button-border: black;
    --color-button-text-hover: hsl(var(--hue-selected), 100%, 50%);
    --color-button-text-inactive: grey;
    --color-button-text: black;
    --color-card-bg: white;
    --color-card-border-selected: hsl(var(--hue-selected), 100%, 50%);
    --color-card-border-used: hsl(0, 0%, 65%);
    --color-card-border: hsl(0, 0%, 50%);
    --color-card-left-border: hsl(var(--hue-left), 25%, 50%);
    --color-card-right-border: hsl(var(--hue-right), 25%, 50%);
    --color-card-left-text: hsl(var(--hue-left), 100%, 25%);
    --color-card-right-text: hsl(var(--hue-right), 100%, 25%);
    --color-card-hand-text-hover: black;
    --color-card-text-used: grey;
    --color-card-text: black;
    --color-clickable-text-hover: hsl(var(--hue-selected), 100%, 50%);
    --color-game-border: black;
    --color-grid-bg: white;
    --color-grid: silver;
    --color-header-menu-text-hover: hsl(var(--hue-selected), 100%, 50%);
    --color-header-menu-text: darkslategray;
}

body {
    background-color: var(--color-bg);
}

#root {
    font-family: 'Spline Sans Mono', monospace;
    font-size: var(--fontsize);
    user-select: none;
}

.menu, .game {
    position: relative;
    min-height: calc(20 * var(--unit));
    width: calc(20 * var(--unit));
    margin: calc(5vh - 2 * var(--border)) auto;
    border: calc(2 * var(--border)) solid var(--color-game-border);
    border-radius: calc(var(--unit) / 2);
    background-size: var(--unit) var(--unit);
    background-image:
        linear-gradient(to right, var(--color-grid) 1px, transparent 1px),
        linear-gradient(to bottom, var(--color-grid) 1px, var(--color-grid-bg) 1px);
}
.game {
    display: flex;
}
.menu-half {
    display: inline-block;
    width: 50%;
    margin-top: var(--unit);
    text-align: center;
}

.mobile {
    --unit: 10vmin;
    --border: 1.25vmin;
    --margin: 1vmin;
    --fontsize: 3.5vmin;
    position: absolute;
    width: 100vw;
    height: 100vh;
    background-size: var(--unit) var(--unit);
    background-image:
        linear-gradient(to right, var(--color-grid) 1px, transparent 1px),
        linear-gradient(to bottom, var(--color-grid) 1px, var(--color-grid-bg) 1px);
    -webkit-tap-highlight-color: transparent;
}

.qr-code {
    width: 60%;
    margin: calc(var(--unit) / 2) auto;
}
.qr-code > * {
    width: 100%;
}

.menu-upper {
    z-index: 10;
    position: absolute;
    top: 0;
    display: flex;
    width: calc(100% - var(--unit) / 2);
    padding: 0 calc(var(--unit) / 4);
    justify-content: space-between;
    line-height: var(--unit);
    font-size: 150%;
    color: var(--color-header-menu-text);
}
.menu-upper .clickable {
    cursor: pointer;
}
.menu-upper .clickable:hover {
    color: var(--color-header-menu-text-hover);
}

.line {
    display: block;
    line-height: var(--unit);
    margin: 0 calc(1.25 * var(--unit));
    font-size: 150%;
}
.line.indented {
    margin-left: calc(2.25 * var(--unit));
    cursor: pointer;
}
h1.line {
    margin: 0;
    line-height: calc(3 * var(--unit));
    text-align: center;
    font-size: 600%;
    font-weight: bold;
}
.mobile .line {
    font-size: 100%;
}
.mobile h1.line {
    font-size: 300%;
}

.input {
    width: 100%;
    border-style: none;
    font-size: inherit;
    font-family: inherit;
    font-weight: bold;
    color: var(--color-active-text);
    background-color: transparent;
}
.line:has(.input.status):after {
    content: "✅";
    float: right;
    position: relative;
    bottom: var(--unit);
    left: var(--unit);
    transform: scale(0);
    transition: .2s cubic-bezier(1, 0, 0.75, 2) transform;
}
.line:has(.input.status.success):after {
    transform: scale(1.25);
}

.side {
    --selected-action-card-index: 1;
    --selected-hand-card-index: 1;
    position: relative;
    flex: 50%;
    padding-bottom: calc(2.5 * var(--unit));
}

.robot {
    position: relative;
    height: calc(10 * var(--unit));
}

.state {
    position: absolute;
    bottom: 0;
    width: 100%;
    text-align: center;
    line-height: var(--unit);
    font-size: 200%;
}

.bodypart {
    position: absolute;
    --up: 0;
    --forward: 4;
    bottom: calc(var(--up) * var(--unit) + var(--margin));
    left: calc(var(--forward) * var(--unit) + var(--margin) + 1px);
    --height: 2;
    --width: 2;
    height: calc(var(--height) * var(--unit) - 2 * var(--border) - 4 * var(--margin) - 1px);
    width: calc(var(--width) * var(--unit) - 2 * var(--border) - 4 * var(--margin) - 1px);
    border: var(--border) solid var(--color-bodypart-border);
    border-radius: calc(var(--unit) / 4);
    text-align: center;
    padding: var(--margin);
    font-size: 150%;
    transition-property: left, right, top, bottom;
    transition-timing-function: ease-in-out;
    color: var(--color-bodypart-text)
}
.side.right .bodypart {
    left: auto;
    right: calc(var(--forward) * var(--unit) + var(--margin));
}

.max-health {
    font-size: 40%;
    color: var(--color-bodypart-text-info);
}
.max-health:before {
    content: "/"
}

.health-change {
    white-space: nowrap;
    position: relative;
    top: calc(-.5 * var(--unit));
    color: var(--color-bodypart-text-important);
    font-weight: bold;
}
.side.left .health-change {
    float: right;
    right: calc(2 * var(--unit));
}
.side.right .health-change {
    float: left;
    left: calc(2 * var(--unit));
}

.tick {
    --tick-size: calc(var(--width) * var(--unit) - 2 * var(--border) - 2 * var(--margin));
    position: absolute;
    bottom: var(--margin);
    left: 50%;
    height: var(--tick-size);
    width: var(--tick-size);
    transform: translateX(-50%);
    font-size: 50%;
    color: var(--color-bodypart-text-info);
}
.mobile .tick {
    --tick-size: calc(3 * var(--unit));
    bottom: auto;
    margin: var(--unit) 0;
    position: relative;
    font-size: 100%;
}
.tick .time-to-input {
    position: absolute;
    width: 100%;
    top: 50%;
    text-align: center;
    font-size: 200%;
    transform: translateY(-50%);
}
.tick .time-to-input.active {
    font-weight: bold;
    color: var(--color-bodypart-text-important);
}
.tick .hand {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(180deg);
    height: var(--tick-size);
    transition-property: none;
    transition-timing-function: linear;
}
.tick .hand:after {
    content: "⬤";
    opacity: .5;
}
.tick .hand.ticking {
    transform: translate(-50%, -50%) rotate(540deg);
    transition-property: transform;
}
.side.right .tick .hand.ticking {
    transform: translate(-50%, -50%) rotate(-180deg);
}
.tick .count {
    position: absolute;
    left: 0;
    bottom: 0;
}
.side.right .tick .count {
    left: auto;
    right: 0;
}
.mobile .tick .count {
    top: 0;
    bottom: auto;
}

.head {
    --up: 6;
}

.torso {
    --up: 3;
    --height: 3;
}

.heatsink {
    --up: 1;
}

.hand {
    --height: 1;
    --width: 1;
    --forward: 6;
}

.hand.right {
    border-color: var(--color-bodypart-hand-right-border);
}
.hand.left {
    border-color: var(--color-bodypart-hand-left-border);
}

.hand.blocking {
    --forward: 7;
    --height: 2;
    --width: .5;
}
.hand.charged {
    --forward: 3.5;
}
.hand.attacking {
    --forward: 13;
}
.hand.attacking.blocked {
    --forward: 11.5;
}

.clickable {
    cursor: pointer;
}
.clickable.with-hover:hover {
    color: var(--color-clickable-text-hover);
    font-weight: bold;
}

.cards, .actions {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: calc(.5 * var(--unit)) 0;
}

.card {
    position: relative;
    flex: auto;
    flex-grow: 0;
    --card-height: calc(2.5 * var(--unit) - 2 * var(--border) - 2 * var(--margin) - 1px);
    height: var(--card-height);
    width: calc(1.8 * var(--unit) - 2 * var(--border) - 2 * var(--margin) - 1px);
    margin: var(--margin);
    border: var(--border) solid var(--color-card-border);
    border-radius: calc(var(--unit) / 4);
    font-size: var(--fontsize);
    text-align: center;
    background-color: var(--color-card-bg);
    color: var(--color-card-text);
    transition: .2s cubic-bezier(1, 0, 0.75, 2) transform;
}
.card.highlight {
    z-index: 10;
    transform: scale(1.35) rotate(5deg);

}
.side.right .card.highlight {
    transform: scale(1.35) rotate(-5deg);
}

.actions .card {
    margin-bottom: calc(var(--card-height) / 3 + var(--margin));
}
.card.used {
    color: var(--color-card-text-used);
    border-color: var(--color-card-border-used);
}
.card:has(.right) {
    border-color: var(--color-card-right-border);
    color: var(--color-card-right-text);
}
.card:has(.left) {
    border-color: var(--color-card-left-border);
    color: var(--color-card-left-text);
}
.card.selected {
    border-color: var(--color-card-border-selected) !important;
}

.icon {
    --fontsize-multiplier: 1;
    font-family: initial;
    font-size: calc(var(--fontsize-multiplier) * var(--fontsize));
    height: calc(var(--card-height) / 2);
    line-height: calc(var(--card-height) / 2);
}
.icon-font {
    font-family: initial;
}

.hand-toggle {
    position: absolute;
    top: calc(var(--card-height) + var(--border));
    height: calc(var(--card-height) / 3);
    width: 100%;
    line-height: 1;
    font-size: 80%;
    font-weight: bold;
    text-align: center;
}
.hand-toggle.clickable:hover {
    color: var(--color-card-hand-text-hover);
}
.hand-toggle.clickable:hover:before {
    content: "TOGGLE ";
}

.message-overlay {
    position: absolute;
    width: 100%;
    text-align: center;
    line-height: calc(2 * var(--unit));
    font-weight: bold;
    font-size: 600%;
    top: calc(4 * var(--unit));
    color: var(--color-active-text);
}

.button {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: calc(.75 * var(--unit));
    width: fit-content;
    --button-height: calc(1.5 * var(--unit) - 2 * var(--border));
    height: var(--button-height);
    line-height: var(--button-height);
    border: var(--border) solid var(--color-button-border);
    border-radius: var(--unit);
    font-size: 150%;
    padding: 0 calc(.5 * var(--unit));
    background-color: var(--color-button-bg);
    color: var(--color-button-text)
}
.button.pushed {
    color: var(--color-button-text-inactive);
    border-color: var(--color-button-border-inactive);
    cursor: inherit;
}
.button.clickable:hover {
    color: var(--color-button-text-hover);
}

.cards-count {
    position: absolute;
    left: 0;
    right: auto;
    bottom:var(--unit);
    text-align: center;
    width: calc(3 * var(--unit));
    height: var(--unit);
    line-height: calc(var(--unit) / 2);
}
.cards-count.discarded {
    left: auto;
    right: 0;
}
.side.right .cards-count.in-deck {
    left: auto;
    right: 0;
}
.side.right .cards-count.discarded {
    left: 0;
    right: auto;
}

